Update footer text in index.html

--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
         </div>
         
         <footer>
-            <p>Created as an educational resource celebrating pioneers in STEAM</p>
-            <p>© 2025 - This page honors the legacy of Elijah McCoy</p>
+           
+            <p>This page honors the legacy of Elijah McCoy</p>
         </footer>
     </div>
 
